# Crun

./: Crun.code-workspace  Makefile  README.md  run.sh
CLI/: .clang-format  .clangd  run.sh
CLI/conf/: CMakeLists.txt
CLI/pkg/: CMakeLists.txt
CLI/project/import/: color.h  patterns.hpp
CLI/project/inc/: inc.hpp
CLI/project/include/: Crun.hpp
CLI/project/models/: patterns.hpp
CLI/project/src/: Crun.cpp  lib.cpp  main.cpp
Crun CLI/project/inc/: inc.hpp
Crun CLI/project/src/: lib.cpp
Crun GUI/pkg/: CMakeLists.txt
Crun GUI/project/inc/: mainwindow.hpp  suAccess.hpp
Crun GUI/project/qss style/: style.qss
Crun GUI/project/res/: CrunIco.qrc  mainWindow.ui  suAccess.ui
Crun GUI/project/src/: main.cpp  mainwindow.cpp  suAccess.cpp
GUI/: run.sh
GUI/conf/: CMakeLists.txt
GUI/conf/test/: CMakeLists.txt
GUI/pkg/: CMakeLists.txt
GUI/project/doc/: tree.txt
GUI/project/inc/: suAccess.hpp
GUI/project/include/: mainwindow.hpp
GUI/project/res/: Crun.qrc  mainWindow.ui  suAccess.ui
GUI/project/src/: main.cpp  mainwindow.cpp  suAccess.cpp
doc/: notes
pkg/: CMakeLists.txt  build.sh  color.h
project/: run.sh
project/inc/: inc.h  inc.hpp
project/src/: lib.c  lib.cpp  main.c  main.cpp
src/: main  main.c
